# smith-oss

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  entrypoint.sh  init-db.sh  postgres.Dockerfile  smithd.Dockerfile
api/: Cargo.toml  roles.toml
api/.sqlx/: query-02a498afe60d3546c9e0c0c8be167cf066bea29623713e78d5d7ecee418ed854.json  query-042c755968e3149cba340e324cf9727950727f359d121eeb2722dbb7c297103d.json  query-042f58d7dd213b570e0e8fc90876d03f408c6d6d31349c0b247d76a61b2deb57.json  query-05dc3ec896fb6e6f882cfb46c1dacff1a1b333cf108119924b9292fb41a91738.json  query-0c4bb3af76215b9e84f60a6081f6a150d32b0b3d18e4d032c55f1d623343378f.json  query-0e8a8686a86cad0d35ce1882c2622c28b79d821049364af6a856000fdbe2bf6c.json  query-0ef79ec7f3411c28466c0342a5058464433ef33631d495de09a64d91d0b91bb6.json  query-11dc77bfef5af46da383d50e2c63d0e6d855846f47e38dc3e15f8a7227d38aed.json  query-12186599093ffc1ed25b2de99b0f194401f83bfca6a155d2fd904515a0e6acf2.json  query-124496aeb6d3540b8c33dd12e95d28b2e120a1a5e43d5483a2da7b9736e3e418.json  query-13c731ae032e0689fa8984a9dbe0bd5bb7d68f0a1b64eeb4f78a16b278e89d87.json  query-154dc150abedc52f7dc6e0dd5b952ff65a709b75ee1e3d68974f9ca9cd04155f.json  query-16e4853adb0bc440a139abba04b1aef944a53686bf8ffc94463418e7b131ec36.json  query-185907d9ee0433cf96d1674be6795d6ec7b4ffae2a529f998964ca1093a46250.json  query-1912404d117af0c5dbf828d2c6951b282ffff5e02f7bcf1ef8e2daa8bf8949ce.json  query-1d0d354efc3e29d7fca4456bdad9932f45afbb7b397b0a4109c5a11e5e8ce883.json  query-1facd8782af1b784367741500bb929588fc052d06b8dcec07554d7032fb45d60.json  query-24392e040f9740cf07cf54c1c6083189483aa4eeff8de5268eb91d6dfa09be9a.json  query-2a4ff3308bc6219fc708086e47b29ed3f7ec61a05b75b17bf0033d70bfc35bad.json  query-2bbed0b9232224b28e896a2aef29a272a1bb503e6fd9c35c3fd1eb4c86403f3b.json  query-2c7f561592215b483ff1af44bd7ccd6c68e9fdb81235781424e3b183c9df10bc.json  query-2eba3141872eb9584a189e83f9782abb260a1fc84dac7597142199f03111bab7.json  query-30eb6b019941bb6df8805cc8d62ec3207ade1aa1460630f2438c107dc84e9fcd.json  query-32151043aa61c127885310dec6590aa9b3f17d9e12c208c2a9f5b23b48fbad80.json  query-34d78bc8b83ec27205476ce43684334a2fe8017703d8bdb8041d33ab70b232d4.json  query-35bd69a4e64fb6eb9f185a24400061827c6cecd7d5f05c0d4a737003cc9518fe.json  query-38b9ea1e9190c9d83a881a25005cb776dc375342cc0b230f24b25f4455ceb710.json  query-3aa1ba53035f6cb99aa77d7fc13734fa1d92af0196601218daa651b9a60bcbda.json  query-3f14e103152848be877fa00bd77e69ae181bb5d2ad63f6b3ff2694ccc9e2d5e0.json  query-3fea5bc298c4bdf246ce78e3b527b9fc29e815853a8f14f7d314a9ddcea611a1.json  query-408dc16b436651abaae2b225245cb25373c97a28dcac7b85350126537d6a9f85.json  query-475b773487ea0f399a21d74b5fb82aee849c2d7a948aab7b4ad019f22f8d6bf2.json  query-47735c465822b9768f8ec63adac2498820eaede116db6780daaed6ed7ad6d890.json  query-496f6e24280aaf7f81afd9b8705a5cbf1f55dbdb604d918b21fb592525690943.json  query-4a4754d91839056dfe3b6a6c38cd327b1e6700184d12bd38696d9e736bf467cf.json  query-4f480aef4395a1f4f8099985e18f8ebb4788363af9c77ad433b738bd8fc226c0.json  query-514a703db2af13460fe7182d163259381e04278a0c52aad81cf074efa2a0ecb4.json  query-51ee66b44eaedc30d2558f1f824700514a4cbd7437ee14f4babe00a3331cb089.json  query-551e60627db4a52d3afc54abdb3f7010b3da8b2eba3dc2c3c3ec50c9c96cca9b.json  query-555a8e3bb378ddec8dfa13fb08fc22631761cea5c258536352a182b81666172c.json  (+88 more)
api/migrations/: 0001_init.sql  20231113144027_baseline.sql  20231113144028_user_table.sql  20231113145319_create_sessions.sql  20231120134727_commands_table.sql  20231120135901_new_commands.sql  20231124102436_roles.sql  20240304082929_version2.sql  20240425075637_new_commands.sql  20240425100848_add_unique_device_tokens.sql  20240502084048_cmd_response_status.sql  20240502094219_timestamps_with_timezone.sql  20240522135808_bundle_commands.sql  20240523122255_rename-active-to-approved.sql  20240524084617_cleanup_1.sql  20240529124432_command_rename.sql  20240531074534_rename_package.sql  20240531080435_rename_release.sql  20240531095004_version_distribution.sql  20240620153008_config_device_index.sql  20240627094835_device_info_column.sql  20240709141217_index_in_token_collumn.sql  20240719080310_telemetry.sql  20240723114724_new_telemetry_column.sql  20240807144922_add_telemetry_index.sql  20240808141110_command_bundles_index.sql  20240813075022_add_active_tag.sql  20240819092445_drop_config_tables.sql  20240830141631_telemetry_service_timestamp_index.sql  20240923085227_network_table.sql  20240923085338_device_network_column.sql  20241011133448_modem.sql  20241022084308_architecture_in_packages.sql  20241028114513_release_state.sql  20241205121101_arch_type_to_distro.sql  20241217113825_partioned-telemetry-table.sql  20241219103640_archived-devices.sql  20250102140012_rollout_history.sql  20250317091712_rollout.sql  20250410091758_users.sql  (+1 more)
api/src/: asset.rs  config.rs  db.rs  main.rs  package.rs  storage.rs
api/src/deployment/: mod.rs  routes.rs  schema.rs
api/src/device/: mod.rs  schema.rs
api/src/handlers/: download.rs  health.rs  home.rs  mod.rs  upload.rs
api/src/modem/: mod.rs  routes.rs  schema.rs
api/src/rollout/: mod.rs  routes.rs  schema.rs
api/src/telemetry/: routes.rs
api/src/users/: db.rs
cli/: Cargo.toml
cli/src/: api.rs  auth.rs  cli.rs  main.rs  print.rs  schema.rs  tunnel.rs
cli/src/config/: mod.rs
smithd/: Cargo.toml  smithd.conf
smithd/debian/: postinst  smithd.service
smithd/src/: daemon.rs  lib.rs  main.rs  shutdown.rs
smithd/src/actors/: mod.rs
smithd/src/bouncer/: mod.rs  report.rs
smithd/src/commander/: free.rs  mod.rs  network.rs  ota.rs  (+4 more)
updater/: Cargo.toml
updater/debian/: smith-updater.service
updater/src/: main.rs
(+61 files in other folders)
