[package]
name = "api"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
smith = { path = "../smithd" }
anyhow.workspace = true

rust-s3 = "0.35.1"
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.4", features = ["typed-header", "query"] }
dotenvy = "0.15.7"
futures = "0.3.30"
jwks_client_rs = "0.5"
oauth2 = "4.4.2"
reqwest = { version = "0.12.8", features = ["json"] }
sentry = "0.34.0"
sentry-tracing = "0.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "chrono",
    "json",
    "postgres",
    "runtime-tokio",
    "time",
    "tls-rustls",
    "uuid",
] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1" }
tower-http = { version = "0.6.1", features = [
    "compression-full",
    "decompression-full",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
metrics = "0.18"
metrics-exporter-prometheus = "0.8"
utoipa = { version = "5", features = ["chrono"] }
utoipa-axum = "0.1"
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
debpkg = "0.6.0"
axum_typed_multipart = { version = "0.13.1" }
tempfile = "3.13.0"
tokio-stream = { version = "0.1.16", features = ["sync"] }
toml = "0.8.20"
