[package]
name = "cli"
version.workspace = true
description = "Smith Command Line Interface (CLI)"
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "sm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = { version = "4.5.46" }
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
open = "5.3.2"
openssl = { version = "0.10", features = ["vendored"] }
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
whoami = "1.5.2"
base64 = "0.22.1"
serde_json = "1.0.128"
chrono = "0.4.38"
colored = "2"
dirs = "5.0"
indicatif = "0.17.8"
russh = "0.45.0"
termion = "4.0.2"
tokio = { version = "1.40.0", features = ["full"] }
tokio-fd = "0.3.0"
async-trait = "0.1.82"
unicode-width = "0.2.0"
strip-ansi-escapes = "0.2.1"
toml = "0.8.20"
