[package]
name = "smith"
default-run = "smithd"
version.workspace = true
description = "Smith Daemon"
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "smithd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7.12"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
